--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,7 @@
     } //路径映射,配合别名使用
   },
   //需要检测的文件
-  "include": [
-    "src/**/*.ts", 
-  "src/**/*.d.ts", 
-  "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [
     {
       "path": "./tsconfig.node.json"
