--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "husky": "8.0.3",
     "jsdoc-babel": "^0.5.0",
     "lint-staged": "^15.2.2",
+    "memont": "^0.0.0-underconstruction",
     "minami": "^1.2.3",
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.2",
     "stylelint": "^16.3.1",
     "stylelint-config-recommended-less": "^3.0.1",
     "stylelint-config-standard": "^36.0.0",
