--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "element-plus": "^2.7.1",
+    "json-stringify-pretty-compact": "^4.0.0",
     "pinia": "^2.1.7",
     "vite-plugin-vue-devtools": "^7.0.27",
     "vue": "^3.4.21",
@@ -36,6 +37,7 @@
     "@eslint/js": "^9.0.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
+    "babel-plugin-prismjs": "^2.1.0",
     "better-docs": "^2.7.3",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
@@ -51,7 +53,8 @@
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
-    "prettier": "^3.2.5",
+    "prettier": "3.2.5",
+    "prismjs": "^1.29.0",
     "sass": "^1.77.2",
     "stylelint": "^16.3.1",
     "stylelint-config-recommended-less": "^3.0.1",
@@ -65,6 +68,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.0",
+    "vite-plugin-prismjs": "^0.0.11",
     "vue-global-api": "^0.4.1",
     "vue-tsc": "^2.0.6"
   }
