--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.7.0",
     "unplugin-auto-import": "^0.17.5",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.0",
     "vite-plugin-prismjs": "^0.0.11",
