--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pinia": "^2.1.7",
     "vite-plugin-vue-devtools": "^7.0.27",
     "vue": "^3.4.21",
+    "vue-i18n": "^11.1.11",
     "vue-router": "^4.3.1"
   },
   "devDependencies": {
