feat(i18n): 重构国际化模块，支持从API动态加载语言配置
- 删除旧的TS语言文件，改用JSON格式
- 新增i18n API服务，支持从服务器获取语言配置和翻译
- 重构语言切换器，支持动态加载和刷新语言列表
- 新增i18n管理页面，支持在线编辑和下载语言包
- 更新axios版本并添加vue-i18n依赖
- 在环境变量中添加i18n API基础URL配置
- 重构main.ts初始化逻辑，支持异步加载语言配置

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,7 @@ VITE_HOST = '0.0.0.0'
 VITE_PORT = 3111
 VITE_BASE_URL = 'http://localhost:3000/web/api'
 VITE_BASE_HOST = 'http://localhost:3000/'
+# i18n api server
+VITE_I18N_API_BASE='http://localhost:3001'
 # VITE_OUTPUT_DIR = 'dist1'
 # VITE_API_DOMAIN = 'http://ip:8080/' //本地环境地址（可用于开发时联调）
