--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,7 @@ VITE_HOST = '0.0.0.0'
 VITE_PORT = 3000
 VITE_BASE_URL = 'https://www.baidu.com/web/api'
 VITE_BASE_HOST = 'https://www.baidu.com/'
+# i18n api server
+VITE_I18N_API_BASE='https://example.com/i18n-api'
 # VITE_OUTPUT_DIR = 'dist'
 # VITE_API_DOMAIN = 'http://ip:8080/'
