--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,7 @@ VITE_BASE_URL = 'http://localhost:3000/web/api'
 VITE_BASE_HOST = 'http://localhost:3000/'
 # i18n api server
 VITE_I18N_API_BASE='http://localhost:3001'
+# DeepSeek API配置
+VITE_DEEPSEEK_API_KEY='sk-cc04dfad34294b3792ce029e82b8a3e8'
 # VITE_OUTPUT_DIR = 'dist1'
 # VITE_API_DOMAIN = 'http://ip:8080/' //本地环境地址（可用于开发时联调）
