--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "axios": "^1.11.0",
     "element-plus": "^2.7.1",
     "json-stringify-pretty-compact": "^4.0.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "vite-plugin-vue-devtools": "^7.0.27",
     "vue": "^3.4.21",
